<resources>
    <string name="app_name">Тахограф Про</string>
</resources>
